// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render React extensions correctly 1`] = `
<Extension
  appState={
    Object {
      "edition": "community",
      "productionDatabase": true,
      "qualifiers": Array [
        "TRK",
      ],
      "settings": Object {},
      "version": "1.0",
    }
  }
  currentUser={
    Object {
      "isLoggedIn": false,
    }
  }
  extension={
    Object {
      "key": "foo",
      "name": "Foo",
    }
  }
  intl={Object {}}
  location={
    Object {
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  router={
    Object {
      "createHref": [MockFunction],
      "createPath": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "isActive": [MockFunction],
      "push": [MockFunction],
      "replace": [MockFunction],
      "setRouteLeaveHook": [MockFunction],
    }
  }
  updateCurrentUserHomepage={[MockFunction]}
>
  <div>
    <Helmet
      title="Foo"
    />
    <div />
  </div>
</Extension>
`;

exports[`should render React extensions correctly 2`] = `
<Extension
  appState={
    Object {
      "edition": "community",
      "productionDatabase": true,
      "qualifiers": Array [
        "TRK",
      ],
      "settings": Object {},
      "version": "1.0",
    }
  }
  currentUser={
    Object {
      "isLoggedIn": false,
    }
  }
  extension={
    Object {
      "key": "foo",
      "name": "Foo",
    }
  }
  intl={Object {}}
  location={
    Object {
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  router={
    Object {
      "createHref": [MockFunction],
      "createPath": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "isActive": [MockFunction],
      "push": [MockFunction],
      "replace": [MockFunction],
      "setRouteLeaveHook": [MockFunction],
    }
  }
  updateCurrentUserHomepage={[MockFunction]}
>
  <div>
    <Helmet
      title="Foo"
    />
    <div
      className="extension"
    />
  </div>
</Extension>
`;
